syntax = "proto3";
package pb;

message wechat_user {
    int64  id = 1;
    int64  wid = 2;
    int64 user_id = 3;
    string openid = 4;
    string nickname = 5;
    int32  sex = 6;
    string province = 7;
    string  city = 8;
    string  country = 9;
    string  language = 10;
    string  headimgurl = 11;
    int64  created_at = 12;
    int64  updated_at = 13;
}

message wechat_user_list {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated wechat_user wechat_users = 4;
}

message request_one_by_wid_openid {
    int64 wid = 1;
    string openid = 2;
}